# jamfile-converter

./: CMakeLists.txt  Makefile  README.md
src/: CMakeGenerator.cpp  CMakeGenerator.h  JamfileParser.cpp  JamfileParser.h  main.cpp
tests/: test_parser.cpp
tests/test_data/: artpaint.Jamfile  complexflags.Jamfile  libshared.Jamfile  mediaplayer.Jamfile  minimal.Jamfile  quotedname.Jamfile  sample.Jamfile  slayer.Jamfile  staticlib.Jamfile  usbdriver.Jamfile  weather.Jamfile
